--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: dimgray;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -23,4 +24,26 @@ a {
     color: white;
     background: black;
   }
+}
+
+h1 {
+  margin: auto;
+  text-align: center;
+}
+
+#inputs {
+  text-align: center;
+}
+
+#imagegeneration {
+  display: inline-block;
+  text-align: center;
+  border-style: solid;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+#bodytype {
+  margin: 0 auto;
+  text-align: center;
 }
