--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,8 @@ body {
   padding: 0;
   margin: 0;
   background-color: dimgray;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -59,4 +59,8 @@ h1 {
 #bodytype {
   margin: 0 auto;
   text-align: center;
+}
+
+.prompty {
+  background-color: #313841;
 }
