--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -61,8 +61,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
-    monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
@@ -123,7 +123,7 @@
   .code {
     background: #111;
   }
-  .logo img {
+  .logo Image {
     filter: invert(1);
   }
 }
