--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,7 @@
 .container {
   padding: 0 2rem;
+  position: relative;
+  width: 930px;
 }
 
 .main {
@@ -127,3 +129,4 @@
     filter: invert(1);
   }
 }
+
