--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   background-color: dimgray;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
+  color: white
 }
 
 a {
@@ -20,16 +21,17 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 
   body {
     color: white;
-    background: black;
+    background: rgb(162, 145, 145);
   }
-}
+} */
+
 
 h1 {
   margin: auto;
@@ -93,4 +95,25 @@ button {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.stats {
+  background-image: url('../public/images/CREATE/char-stat-bg.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.checkbox-stats {
+  width: 24px;
+  height: 24px;
+  appearance: none;
+  opacity: 1;
+  border: 1px solid white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.checkbox-stats:checked {
+  background-color: rgb(255, 45, 80);
 }
