--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -105,10 +105,7 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
+
 
 @media (max-width: 600px) {
   .grid {
@@ -125,8 +122,10 @@
   .code {
     background: #111;
   }
-  .logo Image {
+  
+ /* .logo Image {
     filter: invert(1);
   }
+  */
 }
 
