--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,7 +76,7 @@ h1 {
     justify-content: center;
   }
 
-  .logo {
+  #logo Image{
     
     height: 3em;
     width: 3em;
@@ -84,5 +84,15 @@ h1 {
   #trynow {
     width: 300px;
   }
+
+  .fire-enter {
+    opacity: 0;
+    transform: scale(0.9);
+}
+.fire-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 300ms ease-in;
+}
  
 
